products seeder and endpoints
