# pc-parts-api/app/Providers/RouteServiceProvider.php
@@ -58,6 +58,7 @@ class RouteServiceProvider extends ServiceProvider
         ], function () {
             require base_path('routes/api/profile.php');
             require base_path('routes/api/orders.php');
+            require base_path('routes/api/products.php');
         });
     }
 
